2008-10-12  higepon  <higepon@users.sourceforge.jp>

        * Addes psyntax/rev0_to10 directory.

        * Added let*-values,

        * Added case-lambda.

        * Added source information to psyntax error message.

        * r6rs-examples/psyntax.scm: Added newest version rev 10 of psyntax.

        * scripts/gen-pre-compiled-faster-cpp.scm (collect-list): Added dot-pair support for (collect-list '(((#(scheme-id else) any . each-any)))).

        * library.scm (case-lambda): Added case-lambda.

2008-10-10  higepon  <higepon@users.sourceforge.jp>

        * VM.cpp (run): Added kind message for wrong number arguments.

2008-10-09  higepon  <higepon@users.sourceforge.jp>

        * library.scm (vector-map): Fixed bug.

        * ListProcedures.cpp : (length p) raise error when (not (list? p)).

2008-10-07  higepon  <higepon@users.sourceforge.jp>

        * Scanner.cpp: Added #xff style number.

        * scanner.re (Scanner): RADIX_16.

        * ByteVector.h (scheme): Modified assert.

        * reader.y (RIGHT_PAREN): Added bytevector check.

2008-10-05  higepon  <higepon@users.sourceforge.jp>

        * Closure.cpp (Closure::sourceInfoString): Fixed SEGV when there is no source location information.

2008-10-03  higepon  <higepon@users.sourceforge.jp>

        * freeproc.cpp (bytevectorPEx): Added bytevector?.

2008-10-02  higepon  <higepon@users.sourceforge.jp>

        * test-data.scm: Added a test for new string style.

        * reader.cpp (readString): Added "hoge \ ... style string support.

        * scanner.re (scan): Added "hoge \ ... style string support.

2008-10-01  higepon  <higepon@users.sourceforge.jp>

        * Implemented all of Unicode procedures.

        * lib/mosh/unicode.ss: Added string-normalize-nfc and string-normalize-nfkc.

        * unicode/make-composition-exclusions-datum.scm : Added.

2008-09-30  higepon  <higepon@users.sourceforge.jp>

        * ArithmeticProcedures.cpp (scheme::minEx):